--- a/index.html
+++ b/index.html
@@ -124,6 +124,33 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Jesse Narkmanee</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://twitter.com/theNarkman" target="_blank">theNarkman</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Sittiphat" target="_blank">Sittiphat</a>
+          </p>
+          <p class="about">I am software engineer for Dolby Labs Inc.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="Online Platform for coding interview preparation">Leetcode</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="A forum for software developers to learn, teach, and share programming knowledge">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://www.teamblind.com/" target="_blank" title="Getting the inside scoop within the Tech Industry">Blind</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">John Rocky Cowan</p>
           <p class="contact">
             <i class="fab fa-github"></i>
