--- a/index.html
+++ b/index.html
@@ -135,12 +135,22 @@
             going to concerts, finding new food spots.
           </p>
           <div class="resources">
-            <p>Only 1 Useful Dev Resource :-( </p>
+            <p>3 useful resources: </p>
             <ul>
               <li>
                 <a href="https://soundcloud.com/hingsing/yacht-mix-v3" 
                 target="_blank" 
-                title="new_mix">My latest mix dropping soon!</a>
+                title="new_mix">Good music!</a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/brianjhsiang/" 
+                target="_blank" 
+                title="linked_in">Let's connect on linked in</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=5HoXesguAM8&list=LL&index=11" 
+                target="_blank" 
+                title="video">An interesting video I watched recently</a>
               </li>
             </ul>
           </div>
