--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">kenn</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/macharia_kenn" target="_blank">macharia_kenn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/SuperiorKe" target="_blank">SuperiorKe</a>
+          </p>
+          <p class="about">Exploring the tech world looking for the enemy I can't defeat.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://mentorlst.com/" target="_blank" title="Second Resource">mentorlst</a>
+              </li>
+              <li>
+                <a href="https://justdjango.com/" target="_blank" title="Third resource">Just Django</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
+
         <!-- ________ *tysonfromearth* Contributor card START ________  -->
         <div class="card">
           <p class="name">Tyson Bryant</p>
