Add kudamndau's card

--- a/index.html
+++ b/index.html
@@ -122,6 +122,38 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+
+        <!-- ________ *@kudamndau* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Kuda M'ndau</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/kudamndau" target="_blank">@kudamndau</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kudamndau" target="_blank">@kudamndau</a>
+          </p>
+          <p class="about">
+            I am a biological sciences graduate, personal development enthusiast and 
+            aspiring entrepreneur who discovered a new found love for Software Engineering.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="An open source Full-Stack Web Development Curriculum">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://swcarpentry.github.io/shell-novice/" target="_blank" title="A comprehensive and interactive course on commandline by Software Capentry">The Unix Shell</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/lessons/foundations-commit-messages" target="_blank" title="My favorite lesson; teaches how to write comprehensive and concise commit messages">The Odin Project: Lesson on writing commit messages</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *@kudamndau* Contributor card END ________  -->
+
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">kenn</p>
