Added my card to index.html

--- a/index.html
+++ b/index.html
@@ -122,6 +122,32 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *Jen card START ________  -->
+        <div class="card">
+          <p class="name">Jen</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/brite107" target="_blank">brite107</a>
+          </p>
+          <p class="about">I'm a computer science student at OSU and full-stack software engineer!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/jlord/git-it-electron" target="_blank" title="Git-it">Git-it</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Free Code Camp">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science" target="_blank"
+                  title="CS50">CS50 Harvard Introduction to Computer Science</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Jen card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">kenn</p>
