My first first contribution @lds.uk00

--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">ldsuk00</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">@LdsUk00</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/your_user_handle" target="_blank">LdsUk00e</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">I love the sense of contributing towards an open souce</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="#" target="_blank" title="Github">https://github.com/</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="#" target="_blank" title="CBTNUGGETS">https://www.cbtnuggets.com/</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="#" target="_blank" title="Pluralsight’s">https://www.pluralsight.com/</a>
               </li>
             </ul>
           </div>
