--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Michael Shaffer</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/mcshaffe4" target="_blank">mcshaffe4</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/shaffem1" target="_blank">shaffem1</a>
+          </p>
+          <p class="about">I'm a CS student with experience programming in C# and Python.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank" title="Site for finding HTML color codes">HTML Color Picker</a>
+              </li>
+              <li>
+                <a href="https://grpc.io" target="_blank" title="gRPC for performing remote procedure calls">Google Remote Procedure Calls</a>
+              </li>
+              <li>
+                <a href="https://neocities.org" target="_blank" title="Free hosting similar to the old geocities">Neocities Free Hosting</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
