--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
       </div>
       <div class="grid" id="contributions">
         <!-- ================================================ -->
-<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ==================  TEMPLATE  ================== -->
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
