--- a/index.html
+++ b/index.html
@@ -121,31 +121,28 @@
         <!-- Keep one line of space above and below your card -->
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-                <!-- ================================================ -->
-        <!-- ==================  TEMPLATE  ================== -->
-        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________ *compudefierro* Contributor card START ________  -->
         <div class="card">
           <p class="name">compudefierro</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/compudefierro" target="_blank">Compudefierro</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/compudefierro" target="_blank">Compudefierro</a>
           </p>
           <p class="about">I'm new on this, I love Git and this good first issue is the best and better.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://github.com/compudefierro/" target="_blank" title="First Resource">Compudefierro</a>
+                <a href="https://devdocs.io/" target="_blank" title="First Resource">DevDocs API documentations</a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/jorge-osvaldo-dri-90602542/" target="_blank" title="Second Resource">Linkedin</a>
+                <a href="https://www.interaction-design.org/literature/topics/ux-design" target="_blank" title="Second Resource">User Experience (UX) Design</a>
               </li>
               <li>
-                <a href="https://www.google.com" target="_blank" title="Third resource">Google</a>
+                <a href="https://regexr.com/" target="_blank" title="Third resource">RegExr is an online tool to learn, build, & test Regular Expressions (RegEx / RegExp)</a>
               </li>
             </ul>
           </div>
