DrJP99's message card

--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">DrJP99</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/jp_dixon99" target="_blank">@jp_dixon99</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/DrJP99" target="_blank">@DrJP99</a>
+          </p>
+          <p class="about">This is my first time contributing to someone else's project.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://git-scm.com/docs" target="_blank" title="First Resource">Git Docs</a>
+              </li>
+              <li>
+                <a href="https://doc.rust-lang.org/std/index.html" target="_blank" title="Second Resource">Learn Rust</a>
+              </li>
+              <li>
+                <a href="https://www.linux.org/pages/download/" target="_blank" title="Third resource">GNU/Linux</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
         <!-- ________ *compudefierro* Contributor card START ________  -->
         <div class="card">
           <p class="name">compudefierro</p>
