--- a/index.html
+++ b/index.html
@@ -122,6 +122,36 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor "CodeDoses" card START ________  -->
+                <div class="card">
+                  <p class="name">CodeDoses</p>
+                  <p class="contact">
+                    <i class="fab fa-x-twitter"></i>
+                    <a href="https://twitter.com/pyxisrn_" target="_blank">CodeDoses</a>
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/codedoses" target="_blank">CodeDoses</a>
+                  </p>
+                  <p class="about">Hi, I'm CodeDoses &#127802; I'm from CA, USA &#128205; PICU RN &#128137;, aspiring Software Engineer &#128187; learning to code! &#128150; </p>
+                  <div class="resources">
+                    <p>4 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a href="https://www.codecademy.com/" target="_blank" title="First Resource">Codecademy</a>
+                      </li>
+                      <li>
+                        <a href="https://codepen.io" target="_blank" title="Second Resource">CodePen</a>
+                      </li>
+                      <li>
+                        <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Third resource">MDN</a>
+                      </li>
+                      <li>
+                        <a href="https://codepip.com" target="_blank" title="Fourth resource">codepip</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor "CodeDoses" card END ________  -->
+
         <div class="card">
           <p class="name">Michael Shaffer</p>
           <p class="contact">
