--- a/index.html
+++ b/index.html
@@ -121,7 +121,33 @@
         <!-- Keep one line of space above and below your card -->
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Piyush Makwana</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">impiyushmakwana</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">iamdeveloperpiyush</a>
+          </p>
+          <p class="about">I bring ideas to life on Android with Kotlin. Fueled by coffee and curiosity, I'm a self-taught developer on a mission to create awesome apps. Let's collaborate!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://m3.material.io/theme-builder" target="_blank" title="First Resource">material-theme-builder</a>
+              </li>
+              <li>
+                <a href="https://developer.android.com/courses" target="_blank" title="Second Resource">android-courses</a>
+              </li>
+              <li>
+                <a href="https://kotlinlang.org/docs/getting-started.html" target="_blank" title="Third resource">getting-started-with-kotlin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
