--- a/index.html
+++ b/index.html
@@ -124,6 +124,33 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Roshan Gupta</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/ig_roshan09" target="_blank">ig_roshan09</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Roshu09" target="_blank">Roshu09</a>
+          </p>
+          <p class="about">👋 Computer Science student, eagerly wanted to start open source contributing.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="First Resource">LeetCode</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Second Resource">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://chat.openai.com/" target="_blank" title="Third resource">ChatGPT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">David Munro</p>
           <p class="contact">
             <i class="fab fa-github"></i>
