--- a/index.html
+++ b/index.html
@@ -124,6 +124,30 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Gustavo Silva</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/gustavofdasilva" target="_blank">gustavofdasilva</a>
+          </p>
+          <p class="about">First time contributing to a project!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="First Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Second Resource">MDN</a>
+              </li>
+              <li>
+                <a href="www.notion.so/" target="_blank" title="Third resource">Notion</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Roshan Gupta</p>
           <p class="contact">
             <i class="fab fa-instagram"></i>
