--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *NOAHGJAC* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Noah Groleau</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/noah-groleau-7b303a294/" target="_blank">Noah Groleau</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/NoahGJAC" target="_blank">NoahGJAC</a>
+          </p>
+          <p class="about">Studying computer science in Quebec</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.phind.com/" target="_blank" title="AI that gives citations for further reading">Phind</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Great resources for any language">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://codepen.io" target="_blank" title="Build and see front-end designs">CodePen</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *NOAHGJAC* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Gustavo Silva</p>
