--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *MhL5* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Mohammad Hosein Lashani</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/MhL5" target="_blank">MhL5</a>
+          </p>
+          <p class="about">I'm a Passionate developer and tech enthusiast</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="First Resource">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://javascript.info/" target="_blank" title="Second Resource">javascript.info</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Third resource">YouTube University</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
         <!-- ________ *NOAHGJAC* Contributor card START ________  -->
         <div class="card">
           <p class="name">Noah Groleau</p>
