--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Om Chandankar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Om_Chandankar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Gitstar-Om</a>
+          </p>
+          <p class="about">triathlete and a passionate coder, love sports</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@freecodecamp" target="_blank" title="First Resource">FreeCodeCamp (Youtube)</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org" target="_blank" title="Second Resource">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="Third resource">Leetcode</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
         <!-- ________ *MhL5* Contributor card START ________  -->
         <div class="card">
           <p class="name">Mohammad Hosein Lashani</p>
