--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Aarya Kasbe</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/Aarya__k" target="_blank">Aarya_K</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/SolarCat05" target="_blank">SolarCat05</a>
+          </p>
+          <p class="about">Trying to be a developer but peer influence has knocked me several steps down, hope I continue the passion I had before</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com" target="_blank" title="First Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://scrimba.com" target="_blank" title="Second Resource">Scrimba</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/c/javascriptmastery" target="_blank" title="Third resource">javascriptmastery</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
         <!-- ________ StackOverflowIsBetterThanAnyAI card START ________  -->
         <div class="card">
           <p class="name">Michael Münzenhofer</p>
