updating name of my card

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
-         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <!-- ________ Aarya Kasbe card START ________  -->
          <div class="card">
           <p class="name">Aarya Kasbe</p>
           <p class="contact">
