--- a/index.html
+++ b/index.html
@@ -121,7 +121,28 @@
         <!-- Keep one line of space above and below your card -->
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-
+        <div class="card">
+          <p class="name">Winkel Yin</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Winkel515" target="_blank">Winkel515</a>
+          </p>
+          <p class="about">Trying to get back into coding</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://leetcode.com/Winkel515/" target="_blank" title="First Resource">Leetcode</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Second Resource">YouTube</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Third resource">Udemy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ________ StackOverflowIsBetterThanAnyAI card START ________  -->
         <div class="card">
           <p class="name">Michael Münzenhofer</p>
