--- a/index.html
+++ b/index.html
@@ -122,6 +122,36 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+
+        <div class="card">
+          <p class="name">Prakhar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/prakhar-agra-10" target="_blank">prakhar-agra-10</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">StackOverflow</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Chat GPT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
+
+
         <!-- ________ StackOverflowIsBetterThanAnyAI card START ________  -->
         <div class="card">
           <p class="name">Michael Münzenhofer</p>
