--- a/index.html
+++ b/index.html
@@ -153,6 +153,37 @@
         </div>
         <!-- ________ StackOverflowIsBetterThanAnyAI card END ________  -->
 
+        <!-- ________ Aarabii Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Aarab Nishchal</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/aarab_ii" target="_blank">aarab_ii</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/losier" target="_blank">Caya</a>
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/aarab.ii" target="_blank">Aarab</a>
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/aarab-nishchal/" target="_blank">Aarab Nishchal</a>
+          </p>
+          <p class="about">From virtual worlds to creative code, I make my mark.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="First Resource">Stack Overflow (for soln)</a>
+              </li>
+              <li>
+                <a href="https://www.javatpoint.com/" target="_blank" title="Second Resource">javatpoint (for docs or learning)</a>
+              </li>
+              <li>
+                <a href="https://lofi.co/" target="_blank" title="Third resource">Music</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Aarabii Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Om Chandankar</p>
