--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">John Co</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/john0ground" target="_blank">john0ground</a>
+          </p>
+          <p class="about">Aspiring developer, just trying to do my own thing and not be stagnant (for now).</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="The Odin Project">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeeksForGeeks">GeeksForGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
         <!-- ________ Aarya Kasbe card START ________  -->
         <div class="card">
           <p class="name">Aarya Kasbe</p>
