added name comment at the start and end of card

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________ *John Co Contributor card START ________  -->
         <div class="card">
           <p class="name">John Co</p>
           <p class="contact">
@@ -145,7 +145,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+        <!-- ________ John Co Contributor card END ________  -->
 
         <!-- ________ Aarya Kasbe card START ________  -->
         <div class="card">
