--- a/index.html
+++ b/index.html
@@ -121,6 +121,32 @@
         <!-- Keep one line of space above and below your card -->
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ugbabe Mark</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">https://twitter.com/Officialantonie</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">https://github.com/UgbabeMark</a>
+          </p>
+          <p class="about">As an AWS Solution Architect, I bring my web development skills and cloud expertise together to craft innovative solutions on the AWS platform. I design, architect, and implement secure and scalable applications, helping businesses leverage the power of the cloud.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://css-tricks.com/" target="_blank" title="Second Resource">CSS-Tricks</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Web" target="_blank" title="Third resource">Mozilla Developer Network (MDN)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
 
         <!-- ________ *John Co Contributor card START ________  -->
         <div class="card">
