--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Keczlif</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/Keczlif" target="_blank">Keczlif</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Keczlif" target="_blank">Keczlif</a>
+          </p>
+          <p class="about">I'm looking for utopia</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://attack.mitre.org/" target="_blank" title="First Resource">Attack mitre</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/channel/UCoGPYkK6arIZPsp38hIlIGw" target="_blank" title="Second Resource">Your motivation</a>
+              </li>
+              <li>
+                <a href="https://tryhackme.com/" target="_blank" title="Third resource">CyberSecurity</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
         <!-- ________ *John Co Contributor card START ________  -->
         <div class="card">
           <p class="name">John Co</p>
