--- a/index.html
+++ b/index.html
@@ -121,6 +121,31 @@
         <!-- Keep one line of space above and below your card -->
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Reddi</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/12eddi" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Feeling very passionated about all of this :3</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com" target="_blank" title="First Resource">Html css learning</a>
+              </li>
+              <li>
+                <a href="https://www.futurepedia.io" target="_blank" title="Second Resource">A list of all ai's</a>
+              </li>
+              <li>
+                <a href="https://www.codewars.com/" target="_blank" title="Third resource">Improve coding skills</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
