--- a/index.html
+++ b/index.html
@@ -124,6 +124,33 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Ravisa Dilanka</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/raveeshadilanka" target="_blank">Raveesha Dilanka</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Ravisadilanka" target="_blank">Ravisa Dilanka</a>
+          </p>
+          <p class="about">A modest programmer, eager to lend a hand to society through coding.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.tutorialspoint.com/" target="_blank" title="First Resource"> TutorialsPoint</a>
+              </li>
+              <li>
+                <a href="https://www.sololearn.com/en/" target="_blank" title="Second Resource">SoloLearn</a>
+              </li>
+              <li>
+                <a href="https://www.khanacademy.org/computing" target="_blank" title="Third resource">Khan Academy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Reddi</p>
           <p class="contact">
             <i class="fab fa-github"></i>
