Deadly-Carp's card
added a new card/p

--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+<!-- ________ Deadly-Carp Contributor card START ________  -->
+<div class="card">
+  <p class="name">Deadly-Carp</p>
+  <p class="contact">
+    <i class="fa-brands fa-discord"></i>
+    <a href="https://discord.gg/MTS98nET" target="_blank">Your handle</a>
+    <i class="fab fa-github"></i>
+    <a href="https://www.github.com/Deadly-Carp" target="_blank">Your handle</a>
+  </p>
+  <p class="about">a geek that likes linux, ttrpgs, TF2 and 3D animation |-/ </p>
+  <div class="resources">
+    <p>3 Unuseful Regular Resources</p>
+    <ul>
+      <li>
+        <a href="https://deadly-carp.github.io" target="_blank" title="My GitHub pages">My Website</a>
+      </li>
+      <li>
+        <a href="https://github.com/topics/good-first-issue" target="_blank" title="Useful for begginers">Github first issues</a>
+      </li>
+      <li>
+        <a href="gaminglinux.fr" target="_blank" title="GLF">French linux Website</a>
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- ________ Deadly-Carp Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Keczlif</p>
