--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <div class="card">
   <p class="name">Deadly-Carp</p>
   <p class="contact">
-    <i class="fa-brands fa-discord"></i>
+    <i class="fab fa-discord"></i>
     <a href="https://discord.gg/MTS98nET" target="_blank">Your handle</a>
     <i class="fab fa-github"></i>
     <a href="https://www.github.com/Deadly-Carp" target="_blank">Your handle</a>
