--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
   <p class="name">Deadly-Carp</p>
   <p class="contact">
     <i class="fab fa-discord"></i>
-    <a href="https://discord.gg/MTS98nET" target="_blank">Your handle</a>
+    <a href="https://discord.gg/MTS98nET" target="_blank">deadly_carp</a>
     <i class="fab fa-github"></i>
-    <a href="https://www.github.com/Deadly-Carp" target="_blank">Your handle</a>
+    <a href="https://www.github.com/Deadly-Carp" target="_blank">Deadly-Carp</a>
   </p>
   <p class="about">a geek that likes linux, ttrpgs, TF2 and 3D animation |-/ </p>
   <div class="resources">
@@ -142,7 +142,7 @@
         <a href="https://github.com/topics/good-first-issue" target="_blank" title="Useful for begginers">Github first issues</a>
       </li>
       <li>
-        <a href="gaminglinux.fr" target="_blank" title="GLF">French linux Website</a>
+        <a href="https://gaminglinux.fr" target="_blank" title="GLF">French linux Website</a>
       </li>
     </ul>
   </div>
