--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ k0ju Contributor card START ________  -->
+        <div class="card">
+          <p class="name">K0Ju</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/k0ju" target="_blank">k0ju</a>
+          </p>
+          <p class="about">On my journey to become a fullstack developer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/karan/Projects?tab=readme-ov-file" target="_blank" title="Github">Project ideas for your own portfolio</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">Literal lifesaver</a>
+              </li>
+              <li>
+                <a href="https://puzzlegarage.com/multiplayer/" target="_blank" title="PuzzleGarage">Take a break from time to time</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ k0ju Contributor card END ________  -->
+
         <!-- ________ Deadly-Carp Contributor card START ________  -->
         <div class="card">
           <p class="name">Deadly-Carp</p>
