update profile links

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
           <p class="name">Daniel Lounsbury</p>
           <p class="contact">
             <i class="fa-brands fa-instagram"></i>
-            <a href="https://www.instagram.com/" target="_blank">daniel.loun</a>
+            <a href="https://www.instagram.com/daniel.loun/" target="_blank">daniel.loun</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com" target="_blank">BigSkyCoder2003</a>
+            <a href="https://github.com/BigSkyCoder2003" target="_blank">BigSkyCoder2003</a>
           </p>
           <p class="about">I am a person</p>
           <div class="resources">
