Apply suggestions from code review
Co-authored-by: Michael <140268904+StackOverflowIsBetterThanAnyAI@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
           <p class="name">ldsuk00</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">@LdsUk00</a>
+            <a href="https://www.twitter.com/@LdsUk00" target="_blank">@LdsUk00</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">LdsUk00e</a>
+            <a href="https://github.com/lds-uk" target="_blank">LdsUk00e</a>
           </p>
           <p class="about">I love the sense of contributing towards an open souce</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="Github">https://github.com/</a>
+                <a href="https://github.com" target="_blank" title="GitHub">GitHub</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="CBTNUGGETS">https://www.cbtnuggets.com/</a>
+                <a href="https://www.cbtnuggets.com" target="_blank" title="CBT Nuggets">CBT Nuggets</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Pluralsight’s">https://www.pluralsight.com/</a>
+                <a href="https://www.pluralsight.com" target="_blank" title="Pluralsight">Pluralsight</a>
               </li>
             </ul>
           </div>
