--- a/index.html
+++ b/index.html
@@ -127,23 +127,21 @@
         <div class="card">
           <p class="name">Prakhar</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/prakhar-agra-10" target="_blank">prakhar-agra-10</a>
+            <a href="https://github.com/prakharagrawal10" target="_blank">prakharagrawal10</a>
           </p>
           <p class="about">about you</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">StackOverflow</a>
+                <a href="https://stackoverflow.com/" target="_blank" title="Stack Overflow">Stack Overflow</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Free Code Camp</a>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="freeCodeCamp">freeCodeCamp</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Chat GPT</a>
+                <a href="https://chat.openai.com/" target="_blank" title="ChatGPT">ChatGPT</a>
               </li>
             </ul>
           </div>
