--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Meesh card START ________  -->
+        <div class="card">
+          <p class="name">Carmeshia</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Meshia13" target="_blank">Meshia13</a>
+          </p>
+          <p class="about">Frontend Web Developer with a love for space</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://appbrewery.github.io/gridgarden/" target="_blank" title="First Resource">Grid Garden</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/" target="_blank" title="Second Resource">Code Academy</a>
+              </li>
+              <li>
+                <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank" title="Third resource">CSS-Tricks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Meesh card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
 
         <div class="card">
