--- a/index.html
+++ b/index.html
@@ -181,6 +181,33 @@
         </div>
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
 
+        <!-- ________ *Bandhan card START ________  -->
+        <div class="card">
+          <p class="name">Bandhan Majumder</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/MEbandhan" target="_blank">MEbandhan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/bandhan-majumder" target="_blank">bandhan-majumder</a>
+          </p>
+          <p class="about">Let's have a chat!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science" target="_blank" title="First Resource">CS50</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Third resource">Youtube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Bandhan Card ENDS ________  -->
+
         <!-- ________ *Jen card START ________  -->
         <div class="card">
           <p class="name">Jen</p>
