--- a/index.html
+++ b/index.html
@@ -5935,7 +5935,41 @@
           </div>
         </div>
         <!-- ________ *Prabhat* card END ________  -->
-
+       
+        <!-- ________ Monopavo card START ________  -->
+        <div class="card">
+          <p class="name">Monopavo</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/monopavo" target="_blank">Monopavo</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/monopavo" target="_blank">Monopavo</a>
+          </p>
+          <p class="about">Hello! I'm an aspiring web designer and full-stack developer based in the South West of England.
+            I'm just beginning my journey into coding, but I hope to one day make a career of it! 
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://mimo.org/" 
+                   target="_blank" 
+                   title="A great way to learn the very basics of coding akin to Duolingo.">Mimo</a>
+              </li>
+              <li>
+                <a href="https://www.sololearn.com/en/" 
+                   target="_blank" 
+                   title="Like Mimo, except with additional challenges and bug hunting to keep things fresh.">Sololearn</a>
+              </li>
+              <li>
+                <a href="https://booleangame.com/" 
+                   target="_blank" 
+                   title="A fun game to quickly learn and adapt to boolean logic.">Boolean Game</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Monopavo card END ________  -->
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
