--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Katewar card START ________  -->
+        <div class="card">
+          <p class="name">Katelyn</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/katewar" target="_blank">Katewar</a>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/katelyn-warnecke/" target="_blank">Katelyn Warnecke</a>
+          </p>
+          <p class="about">I'm a manufacturing technician looking to begin my journery into the world
+            of programming and full-stack development</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="First Resource">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://learn.microsoft.com/en-us/training/browse/" target="_blank" title="Second Resource">Microsoft Learn Modules</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/" target="_blank" title="Third resource">Codecademy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Katewar card END ________  -->
+
         <!-- ________ Meesh card START ________  -->
         <div class="card">
           <p class="name">Carmeshia</p>
