--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="./output.css" rel="stylesheet">
     <title>Contribute To This Project</title>
   </head>
   <body>
@@ -36,7 +37,7 @@
       </div>
       <div class="row">
         <div class="column-double">
-          <div class="column-left">
+          <div class="column-left ">
             <h1>CONTRIBUTE TO THIS PROJECT</h1>
             <h2>A project for first-time contributions</h2>
             <p>
