--- a/index.html
+++ b/index.html
@@ -122,6 +122,35 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Gustavo Santiago card START ________  -->
+        <div class="card">
+          <p class="name">Gustavo Santiago</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/gustavo-santiago-541641144/" target="_blank">Gustavo Santiago &nbsp</a>
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/gustavorsanti" target="_blank">gustavorsanti &nbsp &nbsp &nbsp</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/gustavo-ribeiro-santiago" target="_blank">gustavo-ribeiro-santiago &nbsp</a>
+          </p>
+          <p class="about">I am a Full Stack Developer looking to make open source contributions.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://news.ycombinator.com/" target="_blank" title="First Resource">Hacker News by Y Combinator</a>
+              </li>
+              <li>
+                <a href="https://copilot.microsoft.com/" target="_blank" title="Second Resource">Microsoft Copilot with Free GPT4</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Third resource">MDN Web Documentation</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Gustavo Santiago card END ________  -->
+
         <!-- ________ Katewar card START ________  -->
         <div class="card">
           <p class="name">Katelyn</p>
