--- a/index.html
+++ b/index.html
@@ -126,23 +126,21 @@
          <div class="card">
           <p class="name">Rekt46</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://twitter.com/Rektama46olan" target="_blank">Rekt46</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/Rektama46OLAN" target="_blank">Rekt46</a>
+            <a href=https://github.com/Rektama46OLAN" target="_blank">Rekt</a>
           </p>
           <p class="about">As someone new to software, I'm happy to discover this project.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.youtube.com/watch?v=-2OW72rBQr8" target="_blank" title="Best 6 Free Web Design Software to Help You Build a Website">Resource 1</a>
+                <a href="https://www.youtube.com/watch?v=dX8396ZmSPk" target="_blank" title="Web Development with HTML & CSS – Full Course for Beginners">Resource 1</a>
               </li>
               <li>
-                <a href="https://www.youtube.com/watch?v=182nZenIh-Q" target="_blank" title="Best Web Development Software | Web Development Tools | Website Builder | Web Development">Resource 2</a>
+                <a href="https://www.youtube.com/watch?v=nu_pCVPKzTk" target="_blank" title="Full Stack Web Development for Beginners (Full Course on HTML, CSS, JavaScript, Node.js, MongoDB)">Resource 2</a>
               </li>
               <li>
-                <a href="https://www.youtube.com/watch?v=U_KjcuWKlOM" target="_blank" title="Web Programlama nedir ? Neler bilmeli ? Ortalama Maaşlar">Resource 3</a>
+                <a href="https://devmountain.com/guides/learn-web-development" target="_blank" title="Beginner's Guide to Web Development ">Resource 3</a>
               </li>
             </ul>
           </div>
