--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <p class="name">Rekt46</p>
           <p class="contact">
             <i class="fab fa-github"></i>
-            <a href=https://github.com/Rektama46OLAN" target="_blank">Rekt</a>
+            <a href="https://github.com/Rektama46OLAN" target="_blank">Rekt</a>
           </p>
           <p class="about">As someone new to software, I'm happy to discover this project.</p>
           <div class="resources">
