--- a/index.html
+++ b/index.html
@@ -5259,6 +5259,33 @@
         </div>
         <!-- Pawan Kushwaha contributor Card Stop -->
 
+        <!-- ________ Saravanakumar R card START ________  -->
+        <div class="card">
+          <p class="name">Saravanakumar R</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://twitter.com/Saravana2003_me" target="_blank">Saravana2003_me</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Saravanakumar2003" target="_blank">Saravanakumar2003</a>
+          </p>
+          <p class="about">Developer, Speaker, Volunteer and Nuclear Enthuaist</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://cs50.harvard.edu/x/2024/" target="_blank" title="First Resource">CS50 2024</a>
+              </li>
+              <li>
+                <a href="https://www.hackerrank.com/" target="_blank" title="Second Resource">Hackerrank (Coding)</a>
+              </li>
+              <li>
+                <a href="https://devfolio.co/hackathons" target="_blank" title="Third resource">Devfolio (Hackathons)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Saravanakumar R card END ________  -->
+
         <!-- ________ ahujaesh Contributor card START ________  -->
         <div class="card">
           <p class="name">Eshaan</p>
