--- a/index.html
+++ b/index.html
@@ -122,6 +122,32 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *Your_Name* card START ________  -->
+        <div class="card">
+          <p class="name">Le Chi Bao</p>
+          <p class="contact">
+            
+            <p >Your handle</p>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/MJujh" target="_blank">MJujh</a>
+          </p>
+          <p class="about">i'm new but excited to learn the vast world of IT love to chat 1 on 1</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@Fireship" target="_blank" title="First Resource">Fireship a great youtuber</a>
+              </li>
+              <li>
+                <a href="https://itviec.com/" target="_blank" title="Second Resource">ITviec is a website for it job in Viet Nam</a>
+              </li>
+              <li>
+                <a href="https://good-first-issues.github.io/" target="_blank" title="Third resource">Good first issue.io great place to find good first issue</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <!-- ________ Gustavo Santiago card START ________  -->
         <div class="card">
           <p class="name">Gustavo Santiago</p>
