Add pulkitgarg04 card info

--- a/index.html
+++ b/index.html
@@ -4122,6 +4122,32 @@
         </div>
         <!-- Naman's Card end -->
 
+        <!-- ________ *Pulkit card START ________  -->
+        <div class="card">
+          <p class="name">Pulkit Garg</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/pulkitgarg04" target="_blank">pulkitgarg04</a>
+          </p>
+          <p class="about">I'm a Computer Science Student at Chitkara University, India and and aspiring software engineer excited to contribute Open
+            Source.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN Docs">MDN Docs</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://scrimba.com/" target="_blank" title="scrimba">Scrimba</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Pulkit card END ________  -->
+
         <!-- ________ Ruben's Contributor card START ________  -->
         <div class="card">
           <p class="name">Ruben</p>
