--- a/index.html
+++ b/index.html
@@ -120,6 +120,32 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Mason Hartle</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/masonhartle/" target="_blank">Mason Hartle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/mhartle02" target="_blank">mhartle02</a>
+          </p>
+          <p class="about">4th year Computer Science student at FSU and aspiring Software Engineer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="The Odin Project">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="freeCodeCamp">freeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ========= START ========= -->
 
