--- a/index.html
+++ b/index.html
@@ -122,6 +122,32 @@
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Sai pradyumna Goud Chiragoni</p>
+          <p class="contact">
+            <!-- <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a> -->
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/saipradyumnagoud" target="_blank">saipradyumnagoud</a>
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/saipradyumnachiragoni/" target="_blank">saipradyumnachiragoni</a>
+          </p>
+          <p class="about">I am a Full Stack Developer from India looking forward to collaborations .</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://uiverse.io/" target="_blank" title="First Resource">uiverse</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://codepen.io/" target="_blank" title="Third resource">codepen</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
           <p class="name">Mason Hartle</p>
           <p class="contact">
             <i class="fa-brands fa-linkedin"></i>
