--- a/index.html
+++ b/index.html
@@ -554,6 +554,45 @@
           </div>
         </div>
         <!-- ========= Card 10 END =========  -->
+        
+        <!-- ========= Card 12 START =========  -->
+        <div class="card">
+          <p class="name">Zohaib Shaik</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/zohaib-shaik-1a8877216/" target="_blank">
+              Zohaib&nbsp;
+            </a>
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/___sk.09__/" target="_blank">___sk.09__&nbsp; </a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/20481A5450" target="_blank">
+              20481A5450 &nbsp;
+            </a>
+          </p>
+          <p class="about">I am a Data Analyst and Full Stack Developer looking to make open source contributions.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.python.org/" target="_blank" title="First Resource">
+                  Python
+                </a>
+              </li>
+              <li>
+                <a href="https://ollama.com/" target="_blank" title="Third resource">
+                  Ollama Web Documentation
+                </a>
+              </li>
+              <li>
+                <a href="https://copilot.microsoft.com/" target="_blank" title="Second Resource">
+                  Microsoft Copilot with Free GPT4
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= Card 12 END =========  -->
 
         <!-- ========= END ========= -->
 
