--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <i class="fab fa-instagram"></i>
             <a href="https://www.instagram.com/saipradyumnachiragoni/" target="_blank">saipradyumnachiragoni</a>
           </p>
-          <p class="about">I am a Full Stack Developer from India looking forward to collaborations .</p>
+          <p class="about">I am an aspiring Full Stack Developer from India looking forward for collaborations .</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
